force-app/main/default/objects/LLC_BI__Strategy__c/fields/LLC_BI__End_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__End_Date__c</fullName>
    <description>Users populate this required field with the date on which this pricing strategy becomes inactive. If there are no active strategies for the selected products, the system continues to use the most recent inactive strategy until a strategy becomes active.</description>
    <inlineHelpText>Enter the date on which this pricing strategy becomes inactive.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>