force-app/main/default/objects/LLC_BI__Strategy__c/fields/LLC_BI__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Start_Date__c</fullName>
    <description>Users populate this required field with the date on which this pricing strategy becomes active. If there is an active strategy for the selected products, the system automatically populates this field with the end date of the active strategy.</description>
    <inlineHelpText>Enter the date on which this pricing strategy becomes active. If an active strategy exists for the selected products, you must use the end date of the active strategy.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>