force-app/main/default/objects/LLC_BI__Strategy__c/fields/LLC_BI__Strategy_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Strategy_Type__c</fullName>
    <description>The user populates this required picklist to set the type of strategy. The system uses this field to determine the appropriate matrix builder workflow.</description>
    <inlineHelpText>Select the type of strategy you wish to create.</inlineHelpText>
    <label>Strategy Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Affordability</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>